FTP/TLS and SFTP Browser for Mac OS X
http://cyberduck.ch/

Last modified: $Date$
Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 

2.8.2 [http://trac.cyberduck.ch/query?status=closed&milestone=2.8.2]
- [Feature] Rendering horrible new folder icons [10.5]
- [Feature] Show transfer progress when using browser session [#1313]
- [Feature] Accept relative paths in bookmark setting [#1167]
- [Bugfix] Writing corrupted entries to the Keychain [#1354]
- [Bugfix] Bookmarks drawer remembers width [#371]

2.8.1 [http://trac.cyberduck.ch/query?status=closed&milestone=2.8.1]
- [Feature] Application code is signed (10.5)
- [Bugfix] Saving file in external editor does not cause upload (10.5) [#1244]
- [Bugfix] Login failure with correct credentials [#1231]
- [Bugfix] Failure to list directory on some servers (SFTP) [#1170]
- [Bugfix] Transfers fails with punctuation characters in path (SCP) [#1265]

2.8 [http://trac.cyberduck.ch/query?status=closed&milestone=2.8]
- [Feature] Using Ganymed SSH2 library [#185]
- [Feature] Support for SCP transfers [#1043]
- [Feature] Queuing file transfers [#986]
- [Feature] Automatic retry of failed network operations [#783]
- [Feature] Limit available bandwidth for transfers [#48]
- [Feature] Browse folder hierarchy in overwrite warning dialog [#18]
- [Feature] Browse folder hierarchy in synchronisation dialog [#18]
- [Feature] Use small icons in the bookmark drawer [#--]
- [Feature] Set the default protocol helper application for FTP and SFTP URLs [#1049]
- [Feature] Setting default permissions for folders [#77]
- [Feature] Notes for bookmarks [#67]
- [Feature] Support for international domain names (IDN) [#1133]
- [Feature] Move files to Trash before overwriting locally [#936]
- [Feature] Use system setting for connect mode (FTP)
- [Feature] Added WriteRoom to the list of supported editors (http://hogbaysoftware.com/projects/writeroom)