@@ -5,9 +5,10 @@ Last modified: $Date$
 Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 
 
 2.8.2 [http://trac.cyberduck.ch/query?status=closed&milestone=2.8.2]
-- [Feature] Rendering horrible new folder icons [10.5]
 - [Feature] Show transfer progress when using browser session [#1313]
 - [Feature] Accept relative paths in bookmark setting [#1167]
+- [Feature] Added MacVim to the list of supported editors (http://slashpunt.org/vim/) [#1322]
+- [Feature] Ugly folder icons rendered (10.5)
 - [Bugfix] Writing corrupted entries to the Keychain [#1354]
 - [Bugfix] Bookmarks drawer remembers width [#371]
 
